[gd_scene load_steps=39 format=3 uid="uid://dd0yr8g44abf6"]

[ext_resource type="Texture2D" uid="uid://dl1jm3fruidp2" path="res://Textures/pattern.png" id="1_6rwhk"]
[ext_resource type="Script" path="res://Scripts/Instruments/xylophone.gd" id="1_ll4k8"]
[ext_resource type="Script" path="res://Scripts/Notes.gd" id="3_gbcmb"]
[ext_resource type="PackedScene" uid="uid://bsfh0nniwedjo" path="res://Scenes/button.tscn" id="4_0wn7q"]
[ext_resource type="Script" path="res://Scripts/ButtonManager.gd" id="4_02ro7"]

[sub_resource type="BoxShape3D" id="BoxShape3D_4tjej"]
size = Vector3(0.2, 0.05, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_h223u"]
albedo_color = Color(0.501961, 0.501961, 0.501961, 1)
albedo_texture = ExtResource("1_6rwhk")

[sub_resource type="BoxMesh" id="BoxMesh_ic8wm"]
material = SubResource("StandardMaterial3D_h223u")
size = Vector3(0.2, 0.05, 0.05)

[sub_resource type="BoxMesh" id="BoxMesh_lcgev"]
material = SubResource("StandardMaterial3D_h223u")
size = Vector3(0.95, 0.025, 0.025)

[sub_resource type="BoxShape3D" id="BoxShape3D_cv7uf"]
size = Vector3(0.2, 1.3, 0.05)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_hgq5e"]
albedo_color = Color(0.501961, 0.501961, 0.501961, 1)
albedo_texture = ExtResource("1_6rwhk")

[sub_resource type="BoxMesh" id="BoxMesh_ud4au"]
material = SubResource("StandardMaterial3D_hgq5e")
size = Vector3(0.2, 1.3, 0.05)

[sub_resource type="BoxMesh" id="BoxMesh_tjqd7"]
material = SubResource("StandardMaterial3D_h223u")
size = Vector3(0.2, 0.02, 0.05)

[sub_resource type="BoxShape3D" id="BoxShape3D_02dbo"]
size = Vector3(0.2, 0.02, 0.05)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_xn1st"]
albedo_color = Color(0, 0, 0, 1)
albedo_texture = ExtResource("1_6rwhk")

[sub_resource type="BoxMesh" id="BoxMesh_5q1p2"]
material = SubResource("StandardMaterial3D_xn1st")
size = Vector3(0.19, 0.02, 0.05)

[sub_resource type="BoxShape3D" id="BoxShape3D_d50wn"]
size = Vector3(0.19, 0.02, 0.05)

[sub_resource type="BoxMesh" id="BoxMesh_dhtbg"]
material = SubResource("StandardMaterial3D_h223u")
size = Vector3(0.18, 0.02, 0.05)

[sub_resource type="BoxShape3D" id="BoxShape3D_ny8jh"]
size = Vector3(0.18, 0.02, 0.05)

[sub_resource type="BoxMesh" id="BoxMesh_1fhjp"]
material = SubResource("StandardMaterial3D_xn1st")
size = Vector3(0.17, 0.02, 0.05)

[sub_resource type="BoxShape3D" id="BoxShape3D_1jppx"]
size = Vector3(0.17, 0.02, 0.05)

[sub_resource type="BoxMesh" id="BoxMesh_uain3"]
material = SubResource("StandardMaterial3D_h223u")
size = Vector3(0.16, 0.02, 0.05)

[sub_resource type="BoxShape3D" id="BoxShape3D_lpx8x"]
size = Vector3(0.16, 0.02, 0.05)

[sub_resource type="BoxMesh" id="BoxMesh_872ne"]
material = SubResource("StandardMaterial3D_h223u")
size = Vector3(0.15, 0.02, 0.05)

[sub_resource type="BoxShape3D" id="BoxShape3D_myvsl"]
size = Vector3(0.15, 0.02, 0.05)

[sub_resource type="BoxMesh" id="BoxMesh_p6uts"]
material = SubResource("StandardMaterial3D_xn1st")
size = Vector3(0.14, 0.02, 0.05)

[sub_resource type="BoxShape3D" id="BoxShape3D_o8qov"]
size = Vector3(0.14, 0.02, 0.05)

[sub_resource type="BoxMesh" id="BoxMesh_jkesm"]
material = SubResource("StandardMaterial3D_h223u")
size = Vector3(0.13, 0.02, 0.05)

[sub_resource type="BoxShape3D" id="BoxShape3D_vob0n"]
size = Vector3(0.13, 0.02, 0.05)

[sub_resource type="BoxMesh" id="BoxMesh_bqdlf"]
material = SubResource("StandardMaterial3D_xn1st")
size = Vector3(0.12, 0.02, 0.05)

[sub_resource type="BoxShape3D" id="BoxShape3D_26s8y"]
size = Vector3(0.12, 0.02, 0.05)

[sub_resource type="BoxMesh" id="BoxMesh_50i43"]
material = SubResource("StandardMaterial3D_h223u")
size = Vector3(0.11, 0.02, 0.05)

[sub_resource type="BoxShape3D" id="BoxShape3D_kk1pn"]
size = Vector3(0.11, 0.02, 0.05)

[sub_resource type="BoxMesh" id="BoxMesh_ilq8g"]
material = SubResource("StandardMaterial3D_xn1st")
size = Vector3(0.1, 0.02, 0.05)

[sub_resource type="BoxShape3D" id="BoxShape3D_w8ms5"]
size = Vector3(0.1, 0.02, 0.05)

[sub_resource type="BoxMesh" id="BoxMesh_k2kv0"]
material = SubResource("StandardMaterial3D_h223u")
size = Vector3(0.09, 0.02, 0.05)

[sub_resource type="BoxShape3D" id="BoxShape3D_n4ctf"]
size = Vector3(0.09, 0.02, 0.05)

[sub_resource type="AudioStreamGenerator" id="AudioStreamGenerator_j2m1n"]
buffer_length = 0.25

[node name="Xylophone" type="Node3D"]
script = ExtResource("1_ll4k8")

[node name="Base" type="Node3D" parent="."]

[node name="Table" type="StaticBody3D" parent="Base"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.33051, 0)
collision_layer = 4
collision_mask = 3

[node name="CollisionShape3D" type="CollisionShape3D" parent="Base/Table"]
shape = SubResource("BoxShape3D_4tjej")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Base/Table"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.469319)
mesh = SubResource("BoxMesh_ic8wm")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Base/Table"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.462806)
mesh = SubResource("BoxMesh_ic8wm")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="Base/Table"]
transform = Transform3D(0.0542008, 0, 0.99853, 0, 1, 0, -0.99853, 0, 0.0542008, -0.0539156, 0.0137591, 0.00164091)
mesh = SubResource("BoxMesh_lcgev")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="Base/Table"]
transform = Transform3D(-0.0573724, 0, 0.998353, 0, 1, 0, -0.998353, 0, -0.0573724, 0.052967, 0.0137591, 0.00164091)
mesh = SubResource("BoxMesh_lcgev")

[node name="Leg" type="StaticBody3D" parent="Base"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.65, 0.469)
collision_layer = 4
collision_mask = 3

[node name="CollisionShape3D" type="CollisionShape3D" parent="Base/Leg"]
shape = SubResource("BoxShape3D_cv7uf")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Base/Leg"]
mesh = SubResource("BoxMesh_ud4au")

[node name="Leg2" type="StaticBody3D" parent="Base"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.65, -0.461)
collision_layer = 4
collision_mask = 3

[node name="CollisionShape3D" type="CollisionShape3D" parent="Base/Leg2"]
shape = SubResource("BoxShape3D_cv7uf")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Base/Leg2"]
mesh = SubResource("BoxMesh_ud4au")

[node name="Notes" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.33085, 0)
script = ExtResource("3_gbcmb")

[node name="C" type="Area3D" parent="Notes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0378758, 0.402536)
collision_layer = 4
collision_mask = 3

[node name="MeshInstance3D" type="MeshInstance3D" parent="Notes/C"]
mesh = SubResource("BoxMesh_tjqd7")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Notes/C"]
shape = SubResource("BoxShape3D_02dbo")

[node name="C#" type="Area3D" parent="Notes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0378758, 0.337445)
collision_layer = 4
collision_mask = 3

[node name="MeshInstance3D" type="MeshInstance3D" parent="Notes/C#"]
mesh = SubResource("BoxMesh_5q1p2")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Notes/C#"]
shape = SubResource("BoxShape3D_d50wn")

[node name="D" type="Area3D" parent="Notes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0378758, 0.275342)
collision_layer = 4
collision_mask = 3

[node name="MeshInstance3D" type="MeshInstance3D" parent="Notes/D"]
mesh = SubResource("BoxMesh_dhtbg")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Notes/D"]
shape = SubResource("BoxShape3D_ny8jh")

[node name="D#" type="Area3D" parent="Notes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0378758, 0.215399)
collision_layer = 4
collision_mask = 3

[node name="MeshInstance3D" type="MeshInstance3D" parent="Notes/D#"]
mesh = SubResource("BoxMesh_1fhjp")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Notes/D#"]
shape = SubResource("BoxShape3D_1jppx")

[node name="E" type="Area3D" parent="Notes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0378758, 0.149619)
collision_layer = 4
collision_mask = 3

[node name="MeshInstance3D" type="MeshInstance3D" parent="Notes/E"]
mesh = SubResource("BoxMesh_uain3")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Notes/E"]
shape = SubResource("BoxShape3D_lpx8x")

[node name="F" type="Area3D" parent="Notes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0378758, 0.0888057)
collision_layer = 4
collision_mask = 3

[node name="MeshInstance3D" type="MeshInstance3D" parent="Notes/F"]
mesh = SubResource("BoxMesh_872ne")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Notes/F"]
shape = SubResource("BoxShape3D_myvsl")

[node name="F#" type="Area3D" parent="Notes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0378758, 0.0293701)
collision_layer = 4
collision_mask = 3

[node name="MeshInstance3D" type="MeshInstance3D" parent="Notes/F#"]
mesh = SubResource("BoxMesh_p6uts")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Notes/F#"]
shape = SubResource("BoxShape3D_o8qov")

[node name="G" type="Area3D" parent="Notes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0378758, -0.0305042)
collision_layer = 4
collision_mask = 3

[node name="MeshInstance3D" type="MeshInstance3D" parent="Notes/G"]
mesh = SubResource("BoxMesh_jkesm")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Notes/G"]
shape = SubResource("BoxShape3D_vob0n")

[node name="G#" type="Area3D" parent="Notes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0378758, -0.0953834)
collision_layer = 4
collision_mask = 3

[node name="MeshInstance3D" type="MeshInstance3D" parent="Notes/G#"]
mesh = SubResource("BoxMesh_bqdlf")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Notes/G#"]
shape = SubResource("BoxShape3D_26s8y")

[node name="A" type="Area3D" parent="Notes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0378758, -0.161564)
collision_layer = 4
collision_mask = 3

[node name="MeshInstance3D" type="MeshInstance3D" parent="Notes/A"]
mesh = SubResource("BoxMesh_50i43")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Notes/A"]
shape = SubResource("BoxShape3D_kk1pn")

[node name="A#" type="Area3D" parent="Notes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0378758, -0.226484)
collision_layer = 4
collision_mask = 3

[node name="MeshInstance3D" type="MeshInstance3D" parent="Notes/A#"]
mesh = SubResource("BoxMesh_ilq8g")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Notes/A#"]
shape = SubResource("BoxShape3D_w8ms5")

[node name="B" type="Area3D" parent="Notes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0378758, -0.288996)
collision_layer = 4
collision_mask = 3

[node name="MeshInstance3D" type="MeshInstance3D" parent="Notes/B"]
mesh = SubResource("BoxMesh_k2kv0")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Notes/B"]
shape = SubResource("BoxShape3D_n4ctf")

[node name="Player" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.28821, 0)
stream = SubResource("AudioStreamGenerator_j2m1n")

[node name="Label3D" type="Label3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -0.25, 1.65, 0)
text = "1"

[node name="Buttons" type="Node3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.135108, 1.26207, 0.469126)
script = ExtResource("4_02ro7")

[node name="Instruments" parent="Buttons" instance=ExtResource("4_0wn7q")]
label = "InstrumentS"

[connection signal="note_begin" from="Notes" to="." method="_on_notes_note_begin"]
[connection signal="note_end" from="Notes" to="." method="_on_notes_note_end"]
[connection signal="body_entered" from="Notes/C" to="Notes" method="_on_c_body_entered"]
[connection signal="body_exited" from="Notes/C" to="Notes" method="_on_c_body_exited"]
[connection signal="body_entered" from="Notes/C#" to="Notes" method="_on_c_sharp_body_entered"]
[connection signal="body_exited" from="Notes/C#" to="Notes" method="_on_c_sharp_body_exited"]
[connection signal="body_entered" from="Notes/D" to="Notes" method="_on_d_body_entered"]
[connection signal="body_exited" from="Notes/D" to="Notes" method="_on_d_body_exited"]
[connection signal="body_entered" from="Notes/D#" to="Notes" method="_on_d_sharp_body_entered"]
[connection signal="body_exited" from="Notes/D#" to="Notes" method="_on_d_sharp_body_exited"]
[connection signal="body_entered" from="Notes/E" to="Notes" method="_on_e_body_entered"]
[connection signal="body_exited" from="Notes/E" to="Notes" method="_on_e_body_exited"]
[connection signal="body_entered" from="Notes/F" to="Notes" method="_on_f_body_entered"]
[connection signal="body_exited" from="Notes/F" to="Notes" method="_on_f_body_exited"]
[connection signal="body_entered" from="Notes/F#" to="Notes" method="_on_f_sharp_body_entered"]
[connection signal="body_exited" from="Notes/F#" to="Notes" method="_on_f_sharp_body_exited"]
[connection signal="body_entered" from="Notes/G" to="Notes" method="_on_g_body_entered"]
[connection signal="body_exited" from="Notes/G" to="Notes" method="_on_g_body_exited"]
[connection signal="body_entered" from="Notes/G#" to="Notes" method="_on_g_sharp_body_entered"]
[connection signal="body_exited" from="Notes/G#" to="Notes" method="_on_g_sharp_body_exited"]
[connection signal="body_entered" from="Notes/A" to="Notes" method="_on_a_body_entered"]
[connection signal="body_exited" from="Notes/A" to="Notes" method="_on_a_body_exited"]
[connection signal="body_entered" from="Notes/A#" to="Notes" method="_on_a_sharp_body_entered"]
[connection signal="body_exited" from="Notes/A#" to="Notes" method="_on_a_sharp_body_exited"]
[connection signal="body_entered" from="Notes/B" to="Notes" method="_on_b_body_entered"]
[connection signal="body_exited" from="Notes/B" to="Notes" method="_on_b_body_exited"]
[connection signal="body_entered" from="Buttons/Instruments" to="Buttons" method="_on_instruments_body_entered"]
[connection signal="body_entered" from="Buttons/SINE" to="Buttons/SINE" method="_on_body_entered"]
[connection signal="body_exited" from="Buttons/SINE" to="Buttons/SINE" method="_on_body_exited"]
[connection signal="body_entered" from="Buttons/TRIANGLE" to="Buttons/TRIANGLE" method="_on_body_entered"]
[connection signal="body_exited" from="Buttons/TRIANGLE" to="Buttons/TRIANGLE" method="_on_body_exited"]
[connection signal="body_entered" from="Buttons/FLUTE" to="Buttons/FLUTE" method="_on_body_entered"]
[connection signal="body_exited" from="Buttons/FLUTE" to="Buttons/FLUTE" method="_on_body_exited"]
[connection signal="body_entered" from="Buttons/OOBE" to="Buttons/OOBE" method="_on_body_entered"]
[connection signal="body_exited" from="Buttons/OOBE" to="Buttons/OOBE" method="_on_body_exited"]
[connection signal="body_entered" from="Buttons/CLARINET" to="Buttons/CLARINET" method="_on_body_entered"]
[connection signal="body_exited" from="Buttons/CLARINET" to="Buttons/CLARINET" method="_on_body_exited"]
[connection signal="body_entered" from="Buttons/HORN" to="Buttons/HORN" method="_on_body_entered"]
[connection signal="body_exited" from="Buttons/HORN" to="Buttons/HORN" method="_on_body_exited"]
[connection signal="body_entered" from="Buttons/GUITAR" to="Buttons/GUITAR" method="_on_body_entered"]
[connection signal="body_exited" from="Buttons/GUITAR" to="Buttons/GUITAR" method="_on_body_exited"]
[connection signal="body_entered" from="Buttons/PIANO" to="Buttons/PIANO" method="_on_body_entered"]
[connection signal="body_exited" from="Buttons/PIANO" to="Buttons/PIANO" method="_on_body_exited"]
